Atualizado de imagens

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <div class="nav-trigger right" data-sector="arte" data-name="ARTE"><span class="sector-name">ARTE</span></div>
 
         <div class="logo-container">
-            <img src="assets/logo-padrao.png" alt="Logo Padrão" class="logo-default">
-            <img src="assets/logo-formacao.png" alt="Logo Formação" class="logo-formacao">
-            <img src="assets/logo-evangelizacao.png" alt="Logo Evangelização" class="logo-evangelizacao">
-            <img src="assets/logo-musica.png" alt="Logo Música" class="logo-musica">
-            <img src="assets/logo-arte.png" alt="Logo Arte" class="logo-arte">
+            <img src="logo-padrao.png" alt="Logo Padrão" class="logo-default">
+            <img src="logo-formacao.png" alt="Logo Formação" class="logo-formacao">
+            <img src="logo-evangelizacao.png" alt="Logo Evangelização" class="logo-evangelizacao">
+            <img src="logo-musica.png" alt="Logo Música" class="logo-musica">
+            <img src="logo-arte.png" alt="Logo Arte" class="logo-arte">
         </div>
 
         <p class="cta-text">Conheça o Projeto Só Vós</p>
