Ajustes pequenos na visualização do desktop

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         Cristianizar o mundo pelas mãos da Santíssima Virgem
     </div>
 
+    <p class="main-subtitle">Passe o mouse ao redor da nossa logo para conhecer nossos setores.</p>
+
     <div id="logo-hub" class="logo-hub">
         <div class="nav-trigger top" data-sector="formacao" data-name="FORMAÇÃO"><span class="sector-name">FORMAÇÃO</span></div>
         <div class="nav-trigger bottom" data-sector="evangelizacao" data-name="EVANGELIZAÇÃO"><span class="sector-name">EVANGELIZAÇÃO</span></div>
@@ -45,10 +47,12 @@
 
     <footer id="main-footer" class="main-footer">
         <div class="social-icons">
+            <p>Conheça nossas redes sociais:</p>
             <a href="https://x.com/sovosprojeto" target="_blank" aria-label="Nosso perfil no X (antigo Twitter)"><i class="fa-brands fa-x-twitter"></i></a>
             <a href="https://instagram.com/sovosprojeto" target="_blank" aria-label="Nosso perfil no Instagram"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://youtube.com/SoVosProjeto" target="_blank" aria-label="Nosso canal no YouTube"><i class="fa-brands fa-youtube"></i></a>
-            <a href="https://open.spotify.com/user/seuperfil" target="_blank" aria-label="Nosso perfil no Spotify"><i class="fa-brands fa-spotify"></i></a>
+            <a href="https://youtube.com/SoVosProjeto" target="_blank" aria-label="Nosso canal no Tik Tok"><i class="fa-brands fa-tiktok"></i></a>
+            <a href="https://open.spotify.com/intl-pt/artist/7b1BpEU8SmOZTHVh5mHuK7?si=sc8CE5vWQUi9PJ9_Wo7k5A" target="_blank" aria-label="Nosso perfil no Spotify"><i class="fa-brands fa-spotify"></i></a>
             <a href="https://wa.me/5567992890848" target="_blank" aria-label="Fale conosco pelo WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
         </div>
     </footer>
