--- a/index.html
+++ b/index.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto de Evangelização Só Vós</title>
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:wght@400;600&display=swap"
+        rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
+
 <body>
 
     <div id="main-maxim" class="main-maxim">
         Cristianizar o mundo pelas mãos da Santíssima Virgem
     </div>
-
+    <p class="cta-text">Conheça o Projeto Só Vós</p>
     <p class="main-subtitle">Passe o mouse ao redor da nossa logo para conhecer nossos setores.</p>
 
     <div id="logo-hub" class="logo-hub">
-        <div class="nav-trigger top" data-sector="formacao" data-name="FORMAÇÃO"><span class="sector-name">FORMAÇÃO</span></div>
-        <div class="nav-trigger bottom" data-sector="evangelizacao" data-name="EVANGELIZAÇÃO"><span class="sector-name">EVANGELIZAÇÃO</span></div>
-        <div class="nav-trigger left" data-sector="musica" data-name="MÚSICA"><span class="sector-name">MÚSICA</span></div>
+        <div class="nav-trigger top" data-sector="formacao" data-name="FORMAÇÃO"><span
+                class="sector-name">FORMAÇÃO</span></div>
+        <div class="nav-trigger bottom" data-sector="evangelizacao" data-name="EVANGELIZAÇÃO"><span
+                class="sector-name">EVANGELIZAÇÃO</span></div>
+        <div class="nav-trigger left" data-sector="musica" data-name="MÚSICA"><span class="sector-name">MÚSICA</span>
+        </div>
         <div class="nav-trigger right" data-sector="arte" data-name="ARTE"><span class="sector-name">ARTE</span></div>
 
         <div class="logo-container">
@@ -36,7 +44,7 @@
             <img src="logo-arte.png" alt="Logo Arte" class="logo-arte">
         </div>
 
-        <p class="cta-text">Conheça o Projeto Só Vós</p>
+
     </div>
 
     <div id="section-content" class="section-content">
@@ -46,17 +54,24 @@
     </div>
 
     <footer id="main-footer" class="main-footer">
+        <p>Conheça nossas redes sociais:</p>
         <div class="social-icons">
-            <p>Conheça nossas redes sociais:</p>
-            <a href="https://x.com/sovosprojeto" target="_blank" aria-label="Nosso perfil no X (antigo Twitter)"><i class="fa-brands fa-x-twitter"></i></a>
-            <a href="https://instagram.com/sovosprojeto" target="_blank" aria-label="Nosso perfil no Instagram"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://youtube.com/SoVosProjeto" target="_blank" aria-label="Nosso canal no YouTube"><i class="fa-brands fa-youtube"></i></a>
-            <a href="https://youtube.com/SoVosProjeto" target="_blank" aria-label="Nosso canal no Tik Tok"><i class="fa-brands fa-tiktok"></i></a>
-            <a href="https://open.spotify.com/intl-pt/artist/7b1BpEU8SmOZTHVh5mHuK7?si=sc8CE5vWQUi9PJ9_Wo7k5A" target="_blank" aria-label="Nosso perfil no Spotify"><i class="fa-brands fa-spotify"></i></a>
-            <a href="https://wa.me/5567992890848" target="_blank" aria-label="Fale conosco pelo WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://x.com/sovosprojeto" target="_blank" aria-label="Nosso perfil no X (antigo Twitter)"><i
+                    class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://instagram.com/sovosprojeto" target="_blank" aria-label="Nosso perfil no Instagram"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://youtube.com/SoVosProjeto" target="_blank" aria-label="Nosso canal no YouTube"><i
+                    class="fa-brands fa-youtube"></i></a>
+            <a href="https://youtube.com/SoVosProjeto" target="_blank" aria-label="Nosso canal no Tik Tok"><i
+                    class="fa-brands fa-tiktok"></i></a>
+            <a href="https://open.spotify.com/intl-pt/artist/7b1BpEU8SmOZTHVh5mHuK7?si=sc8CE5vWQUi9PJ9_Wo7k5A"
+                target="_blank" aria-label="Nosso perfil no Spotify"><i class="fa-brands fa-spotify"></i></a>
+            <a href="https://wa.me/5567992890848" target="_blank" aria-label="Fale conosco pelo WhatsApp"><i
+                    class="fa-brands fa-whatsapp"></i></a>
         </div>
     </footer>
 
-    <script src="script.js"></script> 
+    <script src="script.js"></script>
 </body>
+
 </html>
