--- a/index.html
+++ b/index.html
@@ -3,71 +3,98 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto de Evangelização Só Vós</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Só Vós - Projeto de Evangelização</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:wght@400;600&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&family=Pinyon+Script&family=Montserrat:wght@300;400;500;600&display=swap"
         rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 
 <body>
 
-    <div id="main-maxim" class="main-maxim">
-        Cristianizar o mundo pelas mãos da Santíssima Virgem
+    <div class="background-system">
+        <div class="bg-layer bg-default active"></div>
+        <div class="bg-layer bg-formacao" id="bg-formacao"></div>
+        <div class="bg-layer bg-evangelizacao" id="bg-evangelizacao"></div>
+        <div class="bg-layer bg-musica" id="bg-musica"></div>
+        <div class="bg-layer bg-arte" id="bg-arte"></div>
     </div>
-    <p class="cta-text">Conheça o Projeto Só Vós</p>
-    <p class="main-subtitle">Passe o mouse ao redor da nossa logo para conhecer nossos setores.</p>
 
-    <div id="logo-hub" class="logo-hub">
-        <div class="nav-trigger top" data-sector="formacao" data-name="FORMAÇÃO"><span
-                class="sector-name">FORMAÇÃO</span></div>
-        <div class="nav-trigger bottom" data-sector="evangelizacao" data-name="EVANGELIZAÇÃO"><span
-                class="sector-name">EVANGELIZAÇÃO</span></div>
-        <div class="nav-trigger left" data-sector="musica" data-name="MÚSICA"><span class="sector-name">MÚSICA</span>
+    <div class="texture-grain"></div>
+
+    <header class="brand-header">
+        <div class="brand-maxim">
+            <span class="script-line">Cristianizar o mundo</span>
+            <span class="serif-line">pelas mãos da Santíssima Virgem</span>
         </div>
-        <div class="nav-trigger right" data-sector="arte" data-name="ARTE"><span class="sector-name">ARTE</span></div>
+    </header>
 
-        <div class="logo-container">
-            <img src="logo-padrao.png" alt="Logo Padrão" class="logo-default">
-            <img src="logo-formacao.png" alt="Logo Formação" class="logo-formacao">
-            <img src="logo-evangelizacao.png" alt="Logo Evangelização" class="logo-evangelizacao">
-            <img src="logo-musica.png" alt="Logo Música" class="logo-musica">
-            <img src="logo-arte.png" alt="Logo Arte" class="logo-arte">
+    <main class="central-stage">
+        <div class="orbit-system">
+
+            <div class="sacred-core" id="logo-core">
+                <img src="assets/logo-padrao.png" alt="Só Vós" class="logo-layer logo-main">
+                <img src="assets/logo-formacao.png" class="logo-layer logo-hover-formacao">
+                <img src="assets/logo-evangelizacao.png" class="logo-layer logo-hover-evangelizacao">
+                <img src="assets/logo-musica.png" class="logo-layer logo-hover-musica">
+                <img src="assets/logo-arte.png" class="logo-layer logo-hover-arte">
+            </div>
+
+            <nav class="cardinal-nav">
+                <button class="nav-item position-top" data-sector="formacao">
+                    <span class="nav-text">Formação</span>
+                </button>
+
+                <button class="nav-item position-bottom" data-sector="evangelizacao">
+                    <span class="nav-text">Evangelização</span>
+                </button>
+
+                <button class="nav-item position-left" data-sector="musica">
+                    <span class="nav-text">Música</span>
+                </button>
+
+                <button class="nav-item position-right" data-sector="arte">
+                    <span class="nav-text">Arte</span>
+                </button>
+            </nav>
+
         </div>
+    </main>
 
+    <section id="modal-overlay" class="modal-overlay">
+        <div class="modal-card">
+            <button class="modal-close" id="close-btn">
+                <i class="fa-solid fa-xmark"></i>
+            </button>
 
-    </div>
+            <div id="dynamic-modal-header" class="modal-hero">
+            </div>
 
-    <div id="section-content" class="section-content">
-        <h1 id="sector-title"></h1>
-        <p id="sector-description"></p>
-        <button id="reset-button" class="reset-button">Voltar</button>
-    </div>
+            <div class="modal-content-scroll">
+                <div id="modal-body" class="body-text">
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <footer id="main-footer" class="main-footer">
-        <p>Conheça nossas redes sociais:</p>
-        <div class="social-icons">
-            <a href="https://x.com/sovosprojeto" target="_blank" aria-label="Nosso perfil no X (antigo Twitter)"><i
-                    class="fa-brands fa-x-twitter"></i></a>
-            <a href="https://instagram.com/sovosprojeto" target="_blank" aria-label="Nosso perfil no Instagram"><i
-                    class="fa-brands fa-instagram"></i></a>
-            <a href="https://youtube.com/SoVosProjeto" target="_blank" aria-label="Nosso canal no YouTube"><i
-                    class="fa-brands fa-youtube"></i></a>
-            <a href="https://youtube.com/SoVosProjeto" target="_blank" aria-label="Nosso canal no Tik Tok"><i
-                    class="fa-brands fa-tiktok"></i></a>
-            <a href="https://open.spotify.com/intl-pt/artist/7b1BpEU8SmOZTHVh5mHuK7?si=sc8CE5vWQUi9PJ9_Wo7k5A"
-                target="_blank" aria-label="Nosso perfil no Spotify"><i class="fa-brands fa-spotify"></i></a>
-            <a href="https://wa.me/5567992890848" target="_blank" aria-label="Fale conosco pelo WhatsApp"><i
-                    class="fa-brands fa-whatsapp"></i></a>
+    <footer id="main-footer" class="minimal-footer">
+        <a href="https://wa.me/5567992890848" target="_blank" class="contact-cta">
+            Dúvidas ou Inspirações? <strong>Fale Conosco</strong>
+        </a>
+
+        <div class="social-dock">
+            <a href="https://instagram.com/sovosprojeto" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.tiktok.com/@sovosprojeto" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+            <a href="https://youtube.com/SoVosProjeto" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://wa.me/5567992890848" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://open.spotify.com/intl-pt/artist/7b1BpEU8SmOZTHVh5mHuK7?si=rc_0ViMlSYeZav9Fm9K3_g"
+                target="_blank"><i class="fa-brands fa-spotify"></i></a>
         </div>
     </footer>
 
